# realtime-chat

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  deps.py  main.py  repositories.py  services.py  socketio_server.py  ws_manager.py
app/routers/: auth.py  chat.py
app/services/: __init__.py  ai_service.py  auth_service.py  chat_service.py  email_service.py
app/utils/: db.py  deps.py  models.py  repositories.py  socketio_server.py  utils.py
static/: chat.html  index.html
